--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 	</header>
 	<main>
 		<section class="task-list">
-			<h2>Tasks</h2>
+			<h2>Today's Tasks</h2>
 
 			<div id="tasks">
 
-				<!-- <div class="task">
+				<div class="task">
 					<div class="content">
 						<input 
 							type="text" 
@@ -42,7 +42,7 @@
 						<button class="edit">Edit</button>
 						<button class="delete">Delete</button>
 					</div>
-				</div> -->
+				</div>
 
 			</div>
 		</section>
