--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				type="text" 
 				name="new-task-input" 
 				id="new-task-input" 
-				placeholder="What do you have planned?" />
+				placeholder="What do you mean?" />
 			<input 
 				type="submit"
 				id="new-task-submit" 
@@ -26,7 +26,7 @@
 	</header>
 	<main>
 		<section class="task-list">
-			<h2>Today's Tasks</h2>
+			<h2>Today Tasks</h2>
 
 			<div id="tasks">
 
