--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Task List 2021</title>
+	<title>Task List 2026</title>
 
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 	
 	<header>
-		<h1>Task List 2021</h1>
+		<h1>Task List 2026</h1>
 		<form id="new-task-form">
 			<input 
 				type="text" 
@@ -26,7 +26,7 @@
 	</header>
 	<main>
 		<section class="task-list">
-			<h2>Today Tasks</h2>
+			<h2>Tomorrow Task</h2>
 
 			<div id="tasks">
 
@@ -39,8 +39,8 @@
 							readonly>
 					</div>
 					<div class="actions">
-						<button class="edit">Edit</button>
-						<button class="delete">Delete</button>
+						<button class="edit">Edits</button>
+						<button class="delete">Deletes</button>
 					</div>
 				</div>
 
