--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	
 	<header>
-		<h1>Task List 2026</h1>
+		<h1>Task List 2027</h1>
 		<form id="new-task-form">
 			<input 
 				type="text" 
@@ -26,7 +26,7 @@
 	</header>
 	<main>
 		<section class="task-list">
-			<h2>Tomorrow Task</h2>
+			<h2>Tomorrow Tasksss</h2>
 
 			<div id="tasks">
 
@@ -39,8 +39,8 @@
 							readonly>
 					</div>
 					<div class="actions">
-						<button class="edit">Edits</button>
-						<button class="delete">Deletes</button>
+						<button class="edit">Editssss</button>
+						<button class="delete">Deletessss</button>
 					</div>
 				</div>
 
