--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	
 	<header>
-		<h1>Task List 2025</h1>
+		<h1>Task List 2027</h1>
 		<form id="new-task-form">
 			<input 
 				type="text" 
@@ -26,7 +26,27 @@
 	</header>
 	<main>
 		<section class="task-list">
-			<h2>Tomorrow Tasksss</h2>
+			<h2>1. Today's Tasks</h2>
+
+			<div id="tasks">
+
+				<div class="task">
+					<div class="content">
+						<input 
+							type="text" 
+							class="text" 
+							value="A new task"
+							readonly>
+					</div>
+					<div class="actions">
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</div>
+				</div>
+
+			</div>
+
+			<h2>2. Tomorrow's Tasks</h2>
 
 			<div id="tasks">
 
